--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body {
 
 h1,h2,h3,h4 {
   font-family: var(--fuenteHeading);
+  line-height: 1.2;
 }
 
 h1 {
@@ -89,6 +90,10 @@ img {
     .header__texto {
       margin-top: 15rem;
     }
+}
+
+.barra {
+  padding: 4rem;
 }
 
 @media (min-width: 768px) {
@@ -163,4 +168,42 @@ img {
 
 .boton--primario {
   background-color: var(--negro);
+}
+
+.boton--secundario {
+  background-color: var(--primario);
+}
+
+.cursos {
+  list-style: none;
+}
+
+.widget-curso {
+  border-bottom: 0.1rem solid var(--gris);
+  margin-bottom: 2rem;
+}
+
+.widget-curso:last-of-type {
+  border: none;
+  margin-bottom: 0;
+}
+
+.widget-curso__label {
+  font-family: var(--fuenteHeading);
+  font-weight: bold;
+}
+
+.widget-curso__info {
+  font-weight: normal;
+}
+
+.widget-curso__label,
+.widget-curso__info {
+  font-size: 2rem;
+}
+
+.footer {
+  background-color: var(--negro);
+  padding-bottom: 3rem;
+  margin-top: 4rem;
 }
